Fixed vertical-align issue with homepage blocks

--- a/css/hesk_newStyle.css
+++ b/css/hesk_newStyle.css
@@ -145,6 +145,7 @@ div.footerWithBorder {
     border-radius: 4px;
     font-size: .83em;
     margin-right: 5px;
+    vertical-align: top;
 }
 
 .block > .upper {
